--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "slugify": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
