--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "html-react-parser": "^0.10.1",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
