--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
-    "html-react-parser": "^0.10.1",
+    "html-react-parser": "^0.10.3",
     "joi-browser": "^13.4.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.3.0",
-    "slugify": "^1.3.6"
+    "react-scripts": "^3.4.1",
+    "slugify": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
