--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.1",
     "slugify": "^1.4.0"
   },
