--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hapi/joi-date": "^2.0.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
